# SurfaceDistanceCalculator

./: CMakeLists.txt  README.md  main.cpp
src/: distanceCalc.cpp  distanceCalc.h  main.cpp
src/utils/: userInput.cpp  userInput.h  writeFile.cpp  writeFile.h
